<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_gravity="top|start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        card_view:cardCornerRadius="4dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/frameLayout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/background">

            <ImageView
                android:id="@+id/ivMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:src="@drawable/movie_gradient"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvGenre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:text="@string/genre_t"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintBottom_toBottomOf="@id/ivMovie"
                android:layout_marginStart="@dimen/genre_start"
                android:layout_marginBottom="22dp"
                android:textAppearance="@style/tag"
                android:textFontWeight="300" />

            <ImageView
                android:id="@+id/ivStar1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_icon_small"
                android:layout_marginTop="4dp"
                android:layout_marginStart="6dp"
                card_view:layout_constraintStart_toStartOf="@id/ivMovie"
                card_view:layout_constraintTop_toBottomOf="@id/tvGenre"/>

            <ImageView
                android:id="@+id/ivStar2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_icon_small"
                android:layout_marginTop="4dp"
                card_view:layout_constraintStart_toEndOf="@id/ivStar1"
                card_view:layout_constraintTop_toBottomOf="@id/tvGenre"/>

            <ImageView
                android:id="@+id/ivStar3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_icon_small"
                android:layout_marginTop="4dp"
                card_view:layout_constraintStart_toEndOf="@id/ivStar2"
                card_view:layout_constraintTop_toBottomOf="@id/tvGenre"/>

            <ImageView
                android:id="@+id/ivStar4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_icon_small"
                android:layout_marginTop="4dp"
                card_view:layout_constraintStart_toEndOf="@id/ivStar3"
                card_view:layout_constraintTop_toBottomOf="@id/tvGenre"/>

            <ImageView
                android:id="@+id/ivStar5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_star_icon_gray_small"
                android:layout_marginTop="4dp"
                card_view:layout_constraintStart_toEndOf="@id/ivStar4"
                card_view:layout_constraintTop_toBottomOf="@id/tvGenre"/>

            <TextView
                android:id="@+id/tvCountReview"
                style="@style/count_review_style_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:text="@string/review_count_t"
                android:layout_marginTop="2dp"
                android:layout_marginStart="6dp"
                card_view:layout_constraintStart_toEndOf="@id/ivStar5"
                card_view:layout_constraintTop_toBottomOf="@id/tvGenre"
                android:textFontWeight="900"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvMovieTitle"
                style="@style/warszawa_po"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:text="@string/movie_title_t"
                android:layout_marginTop="8dp"
                android:layout_marginStart="20dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/ivMovie"
                android:textFontWeight="900"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvDuration"
                style="@style/min"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|start"
                android:text="@string/movie_duration_t"
                android:layout_marginStart="20dp"
                card_view:layout_constraintStart_toStartOf="parent"
                card_view:layout_constraintTop_toBottomOf="@id/tvMovieTitle"
                android:textFontWeight="900"
                android:textStyle="bold" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>